# chessmarkable

./: Cargo.toml  Cross.toml  LICENSE  README.md  oxide
.cargo/: config
.github/workflows/: audit_dependencies.yml  build.yml  build_snapshot.yml  check_and_build.yml  check_code.yml
chess_pgn_parser/: Cargo.toml  LICENSE  README.md
chess_pgn_parser/src/: lib.rs  model.rs
res/: piece-moved-from.xcf
res/sources/: chess-26774_960_720_url  piece-moved-from.xcf
serde_string_derive/: Cargo.toml
serde_string_derive/src/: lib.rs
src/: canvas.rs  chess_game.rs  chess_logic.rs  game.rs  lib.rs  main.rs  player.rs  proto.rs  replay.rs  square.rs
src/lib/: lib.rs  proto.rs
src/scene/: game_scene.rs  main_menu_scene.rs  mod.rs
