[package]
name = "chessmarkable"
version = "0.7.1"
authors = ["Linus <linus@cosmos-ink.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_string_derive = { path = "serde_string_derive" }

libremarkable = "0.4.3"
anyhow = "1.0.33"
clap = "3.0.0-beta.1"
downcast-rs = "1.2"
env_logger = "0.8"
fxhash = "0.2"
lazy_static = "1.4"
log = "0.4"
pleco = "0.5"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1.0"
serde_yaml = "0.8"
thiserror = "1.0"
glob = "0.3.0"

[dependencies.tokio]
version = "0.2"
features = [
    "blocking",
    "rt-core",
    "rt-threaded",
    "stream",
    "sync",
    "time"
]
