[package]
name = "chessmarkable"
version = "0.8.0"
authors = ["Linus <linus@cosmos-ink.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_string_derive = { path = "serde_string_derive" }

libremarkable = "0.6.0"
anyhow = "1.0.33"
clap = { version = "3.1", features = [ "derive" ] }
downcast-rs = "1.2"
env_logger = "0.9"
fxhash = "0.2"
lazy_static = "1.4"
log = "0.4"
tanton = "1.0.0"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1.0"
serde_yaml = "0.8"
thiserror = "1.0"
glob = "0.3.0"
chess_pgn_parser = "0.1.2"
regex = "1.5"
tokio = { version = "1.18", features = [ "rt-multi-thread", "sync" ] }
tokio-stream = "0.1"

[patch.crates-io]
chess_pgn_parser = { path = 'chess_pgn_parser' }
