[package]
name = "chessmarkable"
version = "0.8.0"
authors = ["Linus <linus@cosmos-ink.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_string_derive = { path = "serde_string_derive" }

libremarkable = { git = "https://github.com/canselcik/libremarkable.git", rev = "e9ae2461" }
anyhow = "1"
clap = { version = "4.5", features = [ "derive" ] }
downcast-rs = "2.0"
env_logger = "0.11"
fxhash = "0.2"
lazy_static = "1.5"
log = "0.4"
pleco = "0.5"
serde = { version = "1", features = [ "derive" ] }
serde_yaml = "0.9"
thiserror = "2.0"
glob = "0.3"
chess_pgn_parser = { path = "chess_pgn_parser" }
regex = "1.11"
tokio = { version = "1.47", features = [ "rt-multi-thread", "sync" ] }
tokio-stream = "0.1"