[package]
name = "serde_string_derive"
version = "0.1.0"
authors = ["Linus <linus@cosmos-ink.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.42", features = [ "derive" ] }
quote = "1.0.7"

[lib]
proc-macro = true
